feat@search: pretty and case insensitive

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@
 .users-group {
   .group-header {
     user-select: none;
+    cursor: pointer;
 
     &.disabled {
       background-color: lightgray;
@@ -40,8 +41,23 @@
   width: 100%;
 
   button {
+    cursor: pointer;
     margin-left: auto;
     pointer-events: all;
+    width: 5rem;
+  }
+}
+
+.sorted-users {
+  input {
+    width: 100%;
+    height: 1.5rem;
+    margin-top: 1rem;
+    border-radius: 1rem;
+    outline: none;
+
+    font-size: 1.2rem;
+    text-align: center;
   }
 }
 
