--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,21 @@
 .list-outer {
   padding: 5px;
   padding-top: 0;
+
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+  &::-webkit-scrollbar-track {
+    background: whitesmoke;
+    border-radius: 1rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: lightgray;
+    border-radius: 1rem;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: gray;
+  }
 }
 
 .user-card {
