--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,10 @@
   }
 }
 
+.selectable {
+  cursor: pointer;
+}
+
 .users-ui {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -15,9 +19,45 @@
 }
 
 .favorite-users {
-  h2 {
+  & > h2 {
     user-select: none;
     text-align: center;
+  }
+}
+
+.favorite-user {
+  width: 100%;
+
+  button {
+    cursor: pointer;
+    pointer-events: all;
+
+    margin-left: auto;
+    width: 5rem;
+    border-radius: 0.5rem;
+
+    font-size: 1.5rem;
+    color: gray;
+    border-color: silver;
+    background-color: whitesmoke;
+  }
+}
+
+.sorted-users {
+  & > input {
+    width: 100%;
+    height: 2rem;
+    margin-top: 1rem;
+    border: 1px solid gray;
+    border-radius: 1rem;
+    outline: none;
+
+    font-size: 1.2rem;
+    text-align: center;
+
+    &::placeholder {
+      color: silver;
+    }
   }
 }
 
@@ -43,46 +83,6 @@
   }
 }
 
-.favorite-user {
-  width: 100%;
-
-  button {
-    cursor: pointer;
-    pointer-events: all;
-
-    margin-left: auto;
-    width: 5rem;
-    border-radius: 0.5rem;
-
-    font-size: 1.5rem;
-    color: gray;
-    border-color: silver;
-    background-color: whitesmoke;
-  }
-}
-
-.sorted-users {
-  input {
-    width: 100%;
-    height: 2rem;
-    margin-top: 1rem;
-    border: 1px solid gray;
-    border-radius: 1rem;
-    outline: none;
-
-    font-size: 1.2rem;
-    text-align: center;
-
-    &::placeholder {
-      color: silver;
-    }
-  }
-}
-
-.selectable {
-  cursor: pointer;
-}
-
 .list-outer {
   padding: 5px;
   padding-top: 0;
@@ -105,10 +105,11 @@
 
 .user-card {
   display: flex;
-  // border: 1px solid lightgray;
   border-radius: 0.5rem;
   margin: 1rem 0;
   pointer-events: none;
+
+  transition: all 0.1s ease;
 
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 
@@ -142,16 +143,18 @@
   }
 }
 
-.hideme {
-  display: none;
-}
-
-.selected > div {
-  background-color: lightgray;
+.selected {
+  div {
+    transform: translateX(10%);
+  }
 }
 
 .droppable {
   border: 1px dotted gray;
   margin: -1px;
-  background-color: azure;
+  background-color: whitesmoke;
+}
+
+.hideme {
+  display: none;
 }
